<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sponsorpay Android Test App</string>
    <string name="launch_offerwall">Launch Offer Wall</string>
    <string name="launch_unlock_offerwall">Launch Unlock Offer Wall</string>
    <string name="unlock_item_id">Item ID</string>
    <string name="unlock_item_name">Unlock Item Name</string>    
    <string name="launch_interstitial">Launch Interstitial</string>
    <string name="request_new_coins">Request New Coins For User</string>
    <string name="request_sp_unlock_items">Request SponsorPay Unlock Items</string>
    <string name="request_banner">Request Offer Banner</string>
    <string name="custom_error_message">An error has happened</string>
    <string name="banner_not_available">Offer Banner not available [http status code: %1$d]</string>
    <string name="banner_request_error">Banner request error: [%1$s]</string>
    <string name="banner_request_error_unknown_host">No connection to the Internet or unknown host</string>
    <string name="interstitial">Interstitial</string>
    <string name="banners">Banners</string>
    <string name="items">Items</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="action_id">Action ID</string>
    <string name="send_action">Report Action</string>
    
    
    <string name="mbe">mBE</string>
    <string name="request_offers">Request Offers</string>
    <string name="start_mbe">Start MBE</string>

</resources>