<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/abstract_fragment_settings_menubar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_menu_bottom_margin"/>
    	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <EditText
	        android:id="@+id/unlock_item_name_field"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:hint="@string/unlock_item_name"
	        android:imeOptions="actionNext"
	        android:singleLine="true" />

	    <EditText
	        android:id="@+id/unlock_item_id_field"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/unlock_item_name_field"
	        android:hint="@string/unlock_item_id"
	        android:imeOptions="actionNext"
	        android:singleLine="true" />

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/unlock_item_name_field"
	        android:layout_marginBottom="25dp"
	        android:layout_toRightOf="@id/unlock_item_id_field"
	        android:onClick="onLaunchUnlockOfferwallClick"
	        android:text="@string/launch_unlock_offerwall" />
	</RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRequestSPUnlockItemsClick"
        android:text="@string/request_sp_unlock_items" />

</LinearLayout>